fix strong tags in dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,15 +17,3 @@ pre.shiki {
 pre.shiki code {
     @apply max-w-[200px] block;
 }
-
-.markdown-text {
-    @apply prose-a:text-font-second
-    prose-code:text-font-second
-    prose-blockquote:text-font-second
-    prose-h1:text-font-second
-    prose-h2:text-font-second
-    prose-h3:text-font-second
-    prose-h4:text-font-second
-    prose-h5:text-font-second
-    prose-h6:text-font-second
-}
